--- a/Develop/templates/main.html
+++ b/Develop/templates/main.html
@@ -9,14 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Team</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
-<body>
-    <header>
-        <h1>My Team</h1>
+<body class="d-flex flex-column align-items-center">
+    <header class="d-flex justify-content-center align-items-center mb-4 p-3 bg-info" style="width: 100%; height: 200px">
+        <h1 class="text-light">My Team</h1>
     </header>
-    <div>
+    <div class="row justify-content-around" style="width: 80%">
         {{ team }}
     </div>
 </body>
