--- a/Develop/templates/manager.html
+++ b/Develop/templates/manager.html
@@ -3,7 +3,7 @@
 <div class="card m-3 shadow rounded" style="width: 14rem;">
     <div class="card-title p-3 text-light bg-primary">
         <h2>{{ name }}</h2>
-        <h3>{{ role }}</h3>
+        <h3><i class="fa fa-coffee mr-2"></i>{{ role }}</h3>
     </div>
     <div class="card-body align-items-center">
         <ul class="list-group">
